--- a/src/index.css
+++ b/src/index.css
@@ -1,22 +1,23 @@
-/* body {
-  width: 1366px;
-  height: 768px;
-  display: grid;
-  grid:
-    "header header header" auto
-    "leftSide body rightSide" 1fr
-    "footer footer footer" auto
-    / auto 1fr auto;
-  gap: 8px;
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
-    "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
-    sans-serif;
+/* @import url('https://fonts.googleapis.com/css2?family=Cinzel:wght@500&family=Inknut+Antiqua:wght@300&family=Notable&family=Press+Start+2P&display=swap');
+ */
+
+
+@import url('https://fonts.googleapis.com/css2?family=Raleway&display=swap');
+
+
+
+body {
+  justify-content: center;
+  /* font-family: 'Raleway', sans-serif; */
+  /* font-family: 'Inknut Antiqua', serif; */
+  font-family: 'Raleway', sans-serif;
+
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
-  background-color: rgb(35, 43, 78);
+  background-color: #5f9bb7
 }
 
+/*
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
     monospace;
@@ -26,22 +27,3 @@ code {
 .body { grid-area: body; }
 .rightSide { grid-area: rightSide; }
 .footer { grid-area: footer; } */
-
-.layout {
-  width: 1366px;
-  height: 768px;
-
-  display: grid;
-  grid:
-    "header header header" auto
-    "leftSide body rightSide" 1fr
-    "footer footer footer" auto
-    / auto 1fr auto;
-  gap: 8px;
-}
-
-.header { grid-area: header; }
-.leftSide { grid-area: leftSide; }
-.body { grid-area: body; }
-.rightSide { grid-area: rightSide; }
-.footer { grid-area: footer; }
