--- a/src/pages/projects.css
+++ b/src/pages/projects.css
@@ -1,19 +1,30 @@
-/* .project-list{
-    display: grid;
-    grid-template-columns: 2;
+.project-list{
+    /* display: grid;
+    grid-template-columns: 1;
     gap: 2rem 1.5rem;
-    margin: 2rem;
+    margin: 2rem;*/
+    /* margin: 15vw 25vh 25vw 25vh; */
+    margin-left: 25vw;
+    margin-right: 25vw;
+    margin-top: 10vh;
+    margin-bottom: 10vh;
     justify-content: space-around;
+    display: flex;
+    flex-direction: row;
 
 }
 
 .project-card{
     border: 3px solid #333;
-    border-color: azure;
+    /* border-color: #102f45; */
+    /* border-color: #2d657f; */
+    border-color: #ed8a34;
     padding: 1rem;
     display: flex;
     flex-direction: column;
     align-items: center;
     border-radius: .5rem;
-    color: azure;
-} */
+    /* color: #ed8a34; */
+    /* color: #2d657f; */
+    color: #102f45;
+}
