--- a/src/components/footer.css
+++ b/src/components/footer.css
@@ -1,26 +1,23 @@
 .footer {
-    text-align: center;
+    display: flex;
+    flex-direction: row;
+    height: 8vh;
     justify-content: center;
+    align-items: center;
+    font-size: 45px;
+    font-weight: bold;
+    border: 2px solid purple;
 }
 
-
-h3 {
-    display: inline;
-    vertical-align: center;
+.footer > div {
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    border: 1px solid yellow;
 }
 
 img{
-    vertical-align: text-bottom;
-    margin-top: 10px;;
-    /* margin-right: 10px; */
-}
-
-.spacer {
-    margin-bottom: 5px;
-    margin-left: 18px;
-}
-
-.margin {
-    margin-left: 15px;
+    margin-left: 2vw;
+    margin-right: 2vw;
 }
 
