--- a/src/pages/about.css
+++ b/src/pages/about.css
@@ -1,27 +1,31 @@
 .flex-container {
-    display: flex;
-    flex-direction: column;
-    justify-content: center;;
-  }
-
-  .flex-container > div {
-    /* margin: 10px; */
-    margin-left: 25vw;
-    margin-right: 25vw;
-    /* padding: 20px; */
-    font-size: 20px;
-  }
-
-.slide-in {
-    animation: slide-in 2s 1 linear;
-    animation-timing-function: ease;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  text-align: center;
 }
 
-@keyframes slide-in {
-    0% {
-        transform: translateX(-500px);;
-    }
-    100% {
-        transform: translateX(0px)
-    }
+.flex-container > div {
+  /* margin-top: 5vh;
+  margin-right: 10vw;
+  margin-bottom: 5vh;
+  margin-left: 10vw; */
+  margin: 2vmax;
+  padding-top: 2vmax;
+  padding-bottom: 4vmax;;
+  font-size: 20px;
+  background-color: #ebbc57;
+}
+
+h2{
+    font-size: x-large;
+    font-weight: bold;
+    display: inline;
+}
+
+.about-img {
+    height: 15vh;
+    border-radius: 50%;
+    display: inline-block;
+    margin-bottom: 3vh;
 }
