--- a/src/pages/about.css
+++ b/src/pages/about.css
@@ -3,27 +3,36 @@
   flex-direction: column;
   justify-content: center;
   text-align: center;
+  border: 2px solid purple;
 }
 
 .flex-container > div {
-  margin: 5vmax;
-  padding-top: 5vmax;
+border-radius: 25px;
+  margin-top: 3vmax;
+  margin-bottom: 3vmax;
+  margin-left: 5vmax;
+  margin-right: 5vmax;
+  padding: 2vmax;
+  box-shadow: inset 0 0 0 1vmax #e08f48;
+  font-size: 20px;
+  /* background-color: #e08f48; */
+  /* padding-top: 5vmax;
   padding-right: 1vmax;
   padding-left: 1vmax;
-  padding-bottom: 4vmax;
-  font-size: 20px;
-  background-color: #ebbc57;
+  padding-bottom: 4vmax; */
+  background-color: #ebbb57; 
 }
 
-h2{
-    font-size: 4vmin;
-    font-weight: bold;
-    display: inline;
+h2 {
+  font-size: 4vmin;
+  font-weight: bold;
+  display: inline;
 }
 
 .about-img {
-    height: 15vmin;
-    border-radius: 50%;
-    display: inline-block;
-    margin-bottom: 3vh;
+  height: 15vmin;
+  border-radius: 50%;
+  display: inline-block;
+  margin-bottom: 3vh;
+  border: 3px solid black;
 }
