--- a/src/components/header.css
+++ b/src/components/header.css
@@ -1,11 +1,12 @@
 header {
+    height: 100vh;
     border: 2px solid blanchedalmond;
 }
 
-.wrapper {
-  height: 20vmin;
+.wrapper > h1 {
+
   border-radius: 8%;
-  margin-top: 3vh;
+  margin-top: 10vh;
   margin-right: 10vw;
   margin-bottom: 1vh;
   margin-left: 10vw;
@@ -13,9 +14,22 @@ header {
   justify-content: center;
   position: relative;
   overflow: hidden;
-  font-size: 5vmin;
+  font-size: 5vmax;
   font-weight: bold;
   text-align: center;
   background-color: #a3c7e1;
-  box-shadow: inset 0 0 0 1vmax #192f44;
+  /* box-shadow: inset 0 0 0 1vmax #192f44; */
+  box-shadow: inset 0 0 0 .2vmax #f7e2d2;
+}
+
+.buttons {
+    width: 50vmax;
+    margin: auto;
+    border: 1px solid red;
+}
+
+.buttons > img {
+    height: 5vmax;
+    border-radius: 10px;
+    /* width: 20vmax; */
 }
