--- a/src/pages/about.css
+++ b/src/pages/about.css
@@ -13,14 +13,17 @@ border-radius: 25px;
   margin-left: 5vmax;
   margin-right: 5vmax;
   padding: 2vmax;
-  box-shadow: inset 0 0 0 1vmax #e08f48;
+  /* box-shadow: inset 0 0 0 1vmax #e08f48; */
+  box-shadow: inset 0 0 0 1vmax #d9b694;
+  /* box-shadow: inset 0 0 0 1vmax #d9af84; */
   font-size: 20px;
   /* background-color: #e08f48; */
   /* padding-top: 5vmax;
   padding-right: 1vmax;
   padding-left: 1vmax;
   padding-bottom: 4vmax; */
-  background-color: #ebbb57; 
+  /* background-color: #ebbb57;  */
+  background-color: #e8cbae; 
 }
 
 h2 {
