--- a/src/components/footer.css
+++ b/src/components/footer.css
@@ -1,7 +1,7 @@
 .footer {
+  height: 50vmax;
   display: flex;
   flex-direction: row;
-  height: 8vh;
   justify-content: center;
   align-items: center;
   font-size: 45px;
@@ -16,7 +16,7 @@
   border: 1px solid yellow;
 }
 
-img {
+.footer > img {
   margin-left: 2vw;
   margin-right: 2vw;
 }
