--- a/src/pages/about.css
+++ b/src/pages/about.css
@@ -1,4 +1,5 @@
 .flex-container {
+  height: 100vh;
   display: flex;
   flex-direction: column;
   justify-content: center;
@@ -7,23 +8,15 @@
 }
 
 .flex-container > div {
-border-radius: 25px;
+  border-radius: 25px;
   margin-top: 3vmax;
   margin-bottom: 3vmax;
   margin-left: 5vmax;
   margin-right: 5vmax;
   padding: 2vmax;
-  /* box-shadow: inset 0 0 0 1vmax #e08f48; */
   box-shadow: inset 0 0 0 1vmax #d9b694;
-  /* box-shadow: inset 0 0 0 1vmax #d9af84; */
   font-size: 20px;
-  /* background-color: #e08f48; */
-  /* padding-top: 5vmax;
-  padding-right: 1vmax;
-  padding-left: 1vmax;
-  padding-bottom: 4vmax; */
-  /* background-color: #ebbb57;  */
-  background-color: #e8cbae; 
+  background-color: #e8cbae;
 }
 
 h2 {
