--- a/src/pages/about.css
+++ b/src/pages/about.css
@@ -1,21 +1,17 @@
-.flex-container {
+section {
   height: 100vh;
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  text-align: center;
-  border: 2px solid purple;
 }
 
 .flex-container > div {
+  text-align: center;
   border-radius: 25px;
-  margin-top: 3vmax;
+  margin-top: 5vmax;
   margin-bottom: 3vmax;
-  margin-left: 5vmax;
-  margin-right: 5vmax;
-  padding: 2vmax;
+  margin-left: 5vmin;
+  margin-right: 5vmin;
+  padding: 3vmax;
   box-shadow: inset 0 0 0 1vmax #d9b694;
-  font-size: 20px;
+  font-size: 18px;
   background-color: #e8cbae;
 }
 
