--- a/src/pages/home.css
+++ b/src/pages/home.css
@@ -1,24 +1,22 @@
 header {
   height: 100vh;
-  /* border: 2px solid blanchedalmond; */
 }
 
 .wrapper > h1 {
-    border-radius: 8%;
-    margin-top: 10vh;
-    margin-right: 10vw;
-    margin-bottom: 1vh;
-    margin-left: 10vw;
-    padding: 20px;
-    justify-content: center;
-    position: relative;
-    overflow: hidden;
-    font-size: 5vmax;
-    font-weight: bold;
-    text-align: center;
-    background-color: #a3c7e1;
-    box-shadow: inset 0 0 0 0.2vmax #f7e2d2;
-    /* border: 2px solid red; */
+  border-radius: 8%;
+  margin-top: 10vh;
+  margin-right: 10vw;
+  margin-bottom: 1vh;
+  margin-left: 10vw;
+  padding: 20px;
+  justify-content: center;
+  position: relative;
+  overflow: hidden;
+  font-size: 5vmax;
+  font-weight: bold;
+  text-align: center;
+  background-color: #a3c7e1;
+  box-shadow: inset 0 0 0 0.2vmax #f7e2d2;
 }
 
 .buttons {
@@ -34,7 +32,6 @@ header {
   margin-right: auto;
   margin-bottom: 0;
   justify-content: right;
-  /* border: 1px solid red; */
 }
 
 .buttons > a {
@@ -45,7 +42,7 @@ header {
 
 .buttons > a > img {
   height: 6.5vmax;
-  width: 25vmax;;
+  width: 25vmax;
   border-radius: 10px;
   border: 2px solid #f7e2d2;
 }
