--- a/src/pages/skills.css
+++ b/src/pages/skills.css
@@ -1,3 +1,21 @@
 .skills-container {
-    height: 100vh;
+  height: 100vh;
+}
+
+.img-container {
+  display: grid;
+  grid-template-columns: 1fr 1fr 1fr;
+  grid-template-rows: 1fr 1fr;
+  grid-column-gap: 1vw;
+  grid-row-gap: 1vh;
+  border: 2px solid red;
+}
+
+.img-container > img {
+  height: 35vh;
+  padding: 20px;
+  margin-left: auto;
+  margin-right: auto;
+  background-color: #102f45;
+  border: 2px solid orange;
 }
