--- a/src/pages/connect.css
+++ b/src/pages/connect.css
@@ -6,17 +6,16 @@
   align-items: center;
   font-size: 45px;
   font-weight: bold;
-  border: 2px solid purple;
 }
 
 .footer > div {
-  display: flex;
-  flex-direction: row;
+  display: grid;
+  grid-template-columns: 1fr 1fr 1fr 1fr;
+  grid-column-gap: 3vw;
   align-items: center;
-  border: 1px solid yellow;
+  padding: 1rem;;
 }
 
-.footer > img {
-  margin-left: 2vw;
-  margin-right: 2vw;
+.footer > a {
+  padding: 1rem;
 }
