--- a/src/pages/connect.css
+++ b/src/pages/connect.css
@@ -17,7 +17,7 @@
   grid-template-columns: 1fr 1fr 1fr 1fr;
   grid-column-gap: 3vw;
   align-items: center;
-  padding: 1rem;;
+  padding: 1rem;
 }
 
 .footer > a {
